fixed the look of the aside on mobile devices
fixes #509

--- a/css/less/posts.less
+++ b/css/less/posts.less
@@ -421,8 +421,7 @@ a.post-permalink:hover {
 		font-size: 20px;
 		border-left: 0;
 	}
-
-
+	
 	.post-header {
 		margin-bottom: 5px;
 		padding-bottom: 30px;
@@ -435,7 +434,7 @@ a.post-permalink:hover {
 
 	.post-header .entry-content {
 		padding-bottom: 0;
-		padding-left: 30px;
+		padding-left: 80px;
 		min-height: 60px;
 		background-image: url(./images/icn-quote-dark.png);
 		background-repeat: no-repeat;
