--- a/css/less/theme-responsive.less
+++ b/css/less/theme-responsive.less
@@ -201,47 +201,18 @@
 		 }// li a
 	}// dropdown-menu
 	
-/*
-	.navbar .dropdown-menu .active > a {
-		color: #fff;
-	}
 	
-	.navbar .dropdown-menu li a:hover, .navbar .dropdown-menu li.active a:hover{
-		color: #fff;
+	/* post format aside */
+	.format-aside {
+		.entry-content {
+			padding: 40px 40px 20px 80px;
+		}
+		
+		.aside-date {
+			left: -10px;
+		}
 	}
-	
 
-	
-	.navbar .dropdown-menu {
-		padding: 0;
-	}
-	
-	
-	.navbar .dropdown-menu a {
-		border-bottom: 0;
-	}
-	
-	.navbar b.caret {
-		display: none;
-	}
-	
-	.navbar .nav-menu > li a {
-		padding: 10px 15px;
-	}
-	
-	.navbar .nav > li > a, .navbar .dropdown-menu a {
-		font-weight: normal;
-	}
-	
-	.navbar .nav-menu li > a:hover, .navbar .nav .active > a, .navbar .nav .active > a:hover {
-		background: none;
-		color: #fff;
-	}
-	
-	.navbar .btn-navbar {
-		margin-left: 15px;
-	}
-*/
 
 	/* Comment form */
 	#comments .comment-container .comment-entry {
